--- a/judging/templates/include/judging_tab.html
+++ b/judging/templates/include/judging_tab.html
@@ -1,4 +1,4 @@
-{% if request.user.is_organizer %}
+{% if request.user.is_organizer and h_judging %}
 <li><a href="{% url 'import_projects' %}">Judging</a></li>
 {% else %}
   <li><a href="{% url 'judge_projects' %}">Judging</a></li>
