--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,19 @@
 
     <meta name="theme-color" content="#f8f8f8">
     <meta name="author" content="{{ h_name }}">
-{#    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">#}
-    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <meta name="description" content="{{ h_description }}">
+
+    <!--FAVICON -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}/assets/img/favicon/favicon-32x32.png?v=00zyG6kr2M">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg' %}" color="#5f723f">
+    <link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico' %}">
+    <meta name="apple-mobile-web-app-title" content="My HackUPC">
+	<meta name="application-name" content="My HackUPC">
+    <meta name="msapplication-TileColor" content="#f8f8f8">
+    <meta name="msapplication-config" content="{% static 'img/favicon/browserconfig.xml' %}">
 
 
     <!--FACEBOOK DESCRIPTION -->
