--- a/applications/templates/include/applications_not_opened.html
+++ b/applications/templates/include/applications_not_opened.html
@@ -1,1 +1,1 @@
-<p>Applications have not been opened. Please check <a href="https://hackkosice.com/">hackkosice.com</a> for more infarmation.</p>
+<p>Applications have not been opened. Please check <a href="https://hackkosice.com/">hackkosice.com</a> for more information.</p>
