Improve email templates

--- a/applications/templates/mails/include/arrival_departure_info.html
+++ b/applications/templates/mails/include/arrival_departure_info.html
@@ -1,2 +1,6 @@
 {% if h_arrive %}<p><b>When to arrive</b> {{ h_arrive }}</p>{% endif %}
 {% if h_leave %}<p><b>When to leave</b> {{ h_leave }}</p>{% endif %}
+<p><b>Friday program</b> Don't miss the opportunity to experience the pre-hackathon atmosphere and get into the right mood with us on <b>Friday</b>, 27 March, with special program for visitors. Stay tuned and follow us on social media for details 🚀</p>
+<p><b>Check your e-mails regularly</b> We may communicate important information with you this way.</p>
+<p><b>Follow us on our social media</b> Hit the like button to get the latest news about what is going to happen! 🔥</p>
+<p><b>Invite your friends!</b> Hackathons are best when sharing passion with peers. Invite your closest friends so you all can experience it together!</p>
