--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -32,6 +32,7 @@
                     </div>
                     -->
                 {% endif %}
+                         <p style="font-size:20px">Have a look at our <a href={{h_app_tutorial}}>application tutorial</a>!</p>
                 {% include 'include/application_form.html' %}
             </div>
 
