--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -32,7 +32,8 @@
                     </div>
                     -->
                 {% endif %}
-                         <p style="font-size:20px">Have a look at our <a href={{h_app_tutorial}}>application tutorial</a>!</p>
+                         <h2>First things first</h2>
+                         <p>Have a quick look at our <a href={{h_app_tutorial}}>application tutorial</a>. The more work you put into your application, the higher the chances of getting in.</p>
                 {% include 'include/application_form.html' %}
             </div>
 
