Hackers application works

--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -115,7 +115,7 @@
                 return is_firsttime_extra.prop("checked");
             });
             // Making wich_hack look like required
-            which_hack.parent().addClass('required');
+            hich_hack.parent().addClass('required');
 
             var is_student = $('input[name="is_student"][value="True"]');
             var is_worker = $('input[name="is_student"][value="False"]');
