Revert "WIP: Add more users"

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -118,7 +118,7 @@
 
                     {% else %}
                         <li><a href="{% url 'account_login' %}">Sign In</a></li>
-                        <li><a href="{% url 'account_signup' 'hacker' %}">Sign Up</a></li>
+                        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
                     {% endif %}
                 </ul>
             </div>
