--- a/user/templates/callback.html
+++ b/user/templates/callback.html
@@ -21,7 +21,7 @@
            {{ error }} Please reach out to <a href="mailto:{{ h_contact_email }}">{{ h_contact_email }}</a> if you think this is an error.
         </p>
         <a class="btn btn-default btn-block"
-               href="{% url 'account_signup' 'hacker' %}">< Go back</a>
+               href="{% url 'account_signup' %}">< Go back</a>
     {% endif %}
 
 {% endblock %}
