--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -23,7 +23,7 @@
         {% endif %}
         {% if not h_app_closed %}
             <a class="btn btn-block"
-               href="{% url 'account_signup' 'hacker' %}">{% trans "...or sign up if you don't have an account" %}</a>
+               href="{% url 'account_signup' %}">{% trans "...or sign up if you don't have an account" %}</a>
         {% endif %}
 
     </form>
