--- a/stats/templates/application_stats.html
+++ b/stats/templates/application_stats.html
@@ -21,6 +21,18 @@
             <div id="gender_stats"></div>
         </div>
     </div>
+    <h2>Origin</h2>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3>All</h3>
+            <div id="origin_stats"></div>
+        </div>
+        <div class="col-md-6">
+            <h3>Confirmed only</h3>
+            <div id="origin_stats_confirmed"></div>
+        </div>
+    </div>
     <h2>T-Shirts sizes</h2>
 
     <div class="row">
@@ -135,6 +147,7 @@
                     }
                 }
             });
+
             c3.generate({
                 bindto: '#shirts_stats',
                 data: {
@@ -177,6 +190,42 @@
                     json: data['diet_confirmed'],
                     keys: {
                         x: 'diet',
+                        value: ['applications']
+                    },
+                    type: 'bar'
+
+                },
+
+                axis: {
+                    x: {
+                        type: 'category'
+                    }
+                }
+            });
+            c3.generate({
+                bindto: '#origin_stats',
+                data: {
+                    json: data['origin'],
+                    keys: {
+                        x: 'origin',
+                        value: ['applications']
+                    },
+                    type: 'bar'
+
+                },
+
+                axis: {
+                    x: {
+                        type: 'category'
+                    }
+                }
+            });
+            c3.generate({
+                bindto: '#origin_stats_confirmed',
+                data: {
+                    json: data['origin_confirmed'],
+                    keys: {
+                        x: 'origin',
                         value: ['applications']
                     },
                     type: 'bar'
