Revert "To hackupc"

--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -120,7 +120,8 @@
                 {% csrf_token %}
                 <input type="hidden" name="app_id" value="{{ app.pk }}"/>
                 <textarea name="comment_text" class="form-control" placeholder="Write a comment..."
-                          rows="3" required maxlength="500"></textarea>
+                          rows="3"
+                          required></textarea>
                 <button name="add_comment" class="btn btn-block btn-default" value="comment">Add comment
                 </button>
             </form>
