--- a/stats/templates/application_stats.html
+++ b/stats/templates/application_stats.html
@@ -33,6 +33,18 @@
             <div id="origin_stats_confirmed"></div>
         </div>
     </div>
+    <h2>University</h2>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3>All</h3>
+            <div id="university_stats"></div>
+        </div>
+        <div class="col-md-6">
+            <h3>Confirmed only</h3>
+            <div id="university_stats_confirmed"></div>
+        </div>
+    </div>
     <h2>T-Shirts sizes</h2>
 
     <div class="row">
@@ -225,6 +237,42 @@
                     json: data['origin_confirmed'],
                     keys: {
                         x: 'origin',
+                        value: ['applications']
+                    },
+                    type: 'bar'
+
+                },
+
+                axis: {
+                    x: {
+                        type: 'category'
+                    }
+                }
+            });
+            c3.generate({
+                bindto: '#university_stats',
+                data: {
+                    json: data['university'],
+                    keys: {
+                        x: 'university',
+                        value: ['applications']
+                    },
+                    type: 'bar'
+
+                },
+
+                axis: {
+                    x: {
+                        type: 'category'
+                    }
+                }
+            });
+            c3.generate({
+                bindto: '#university_stats_confirmed',
+                data: {
+                    json: data['university_confirmed'],
+                    keys: {
+                        x: 'university',
                         value: ['applications']
                     },
                     type: 'bar'
