--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -4,7 +4,7 @@
 <style>
     #id_under_age > div, #id_tshirt_size > div, #id_graduation_year > div, #id_team > div, #id_first_timer > div,
     #id_scholarship > div, #id_reimb > div, #id_first_time_volunteer > div, #id_which_hack > div, #id_attendance > div,
-    #id_english_level > div {
+    #id_english_level > div, #id_first_time_mentor > div , #id_study_work > div {
         display: inline-block;
         padding-right: 20px;
         margin-bottom: 0;
@@ -108,6 +108,8 @@
 
             var is_firsttime_volunteer = $('input[name="first_time_volunteer"][value="True"]');
             var experienced_volunteer = $('input[name="first_time_volunteer"][value="False"]');
+            var is_firsttime_mentor = $('input[name="first_time_mentor"][value="True"]');
+            var experienced_mentor = $('input[name="first_time_mentor"][value="False"]')
             var which_hack = $('#id_which_hack');
             conditional_field(which_hack, is_firsttime_volunteer, function () {
                 return is_firsttime_volunteer.prop("checked");
@@ -115,9 +117,42 @@
             conditional_field(which_hack, experienced_volunteer, function () {
                 return is_firsttime_volunteer.prop("checked");
             });
+            conditional_field(which_hack, is_firsttime_mentor, function () {
+                return is_firsttime_mentor.prop("checked");
+            });
+            conditional_field(which_hack, experienced_mentor, function () {
+                return is_firsttime_mentor.prop("checked");
+            });
             // Making projects look like required
             which_hack.parent().addClass('required');
-
+            {% if form.mentor %}
+                var company_mentor = $('#id_company');
+                var university_mentor = $('#id_university');
+                var degree_mentor = $('#id_degree');
+                var worker = $('input[name="study_work"][value="True"]');
+                var student = $('input[name="study_work"][value="False"]');
+                conditional_field(degree_mentor, worker, function () {
+                    return worker.prop("checked");
+                });
+                conditional_field(degree_mentor, student, function () {
+                    return worker.prop("checked");
+                });
+                conditional_field(university_mentor, worker, function () {
+                    return worker.prop("checked");
+                });
+                conditional_field(university_mentor, student, function () {
+                    return worker.prop("checked");
+                });
+                conditional_field(company_mentor, worker, function () {
+                    return student.prop("checked");
+                });
+                conditional_field(company_mentor, student, function () {
+                    return student.prop("checked");
+                });
+                company_mentor.parent().addClass('required');
+                university_mentor.parent().addClass('required');
+                degree_mentor.parent().addClass('required');
+            {% endif %}
             {% if not application %}
                 var timer;
                 var clear_timer;
