--- a/stats/templates/application_stats.html
+++ b/stats/templates/application_stats.html
@@ -138,8 +138,11 @@
                 bindto: '#shirts_stats_confirmed',
                 data: {
                     json: data['shirt_count_confirmed'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'tshirt',
+                          value: ['applications']
+                    },
                 },
 
                 axis: {
@@ -182,8 +185,11 @@
                 bindto: '#shirts_stats',
                 data: {
                     json: data['shirt_count'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'tshirt',
+                          value: ['applications']
+                    },
                 },
 
                 axis: {
@@ -196,8 +202,11 @@
                 bindto: '#diet_stats',
                 data: {
                     json: data['diet'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'diet',
+                          value: ['applications']
+                    },
                 },
 
                 axis: {
@@ -210,8 +219,11 @@
                 bindto: '#diet_stats_confirmed',
                 data: {
                     json: data['diet_confirmed'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'diet',
+                          value: ['applications']
+                    },
                 },
 
                 axis: {
@@ -224,12 +236,17 @@
                 bindto: '#origin_stats',
                 data: {
                     json: data['origin'],
+                    keys: {
+                          x: 'origin',
+                          value: ['applications']
+                    },
                     type: 'bar'
 
                 },
 
                 axis: {
                     x: {
+                        fillColor: 'white',
                         type: 'category'
                     }
                 }
@@ -238,8 +255,11 @@
                 bindto: '#origin_stats_confirmed',
                 data: {
                     json: data['origin_confirmed'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'origin',
+                          value: ['applications']
+                    },
                 },
 
                 axis: {
@@ -252,8 +272,11 @@
                 bindto: '#university_stats',
                 data: {
                     json: data['university'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'university',
+                          value: ['applications']
+                    },
                 },
 
                 axis: {
@@ -266,8 +289,11 @@
                 bindto: '#university_stats_confirmed',
                 data: {
                     json: data['university_confirmed'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'university',
+                          value: ['applications']
+                    },
                 },
 
                 axis: {
@@ -310,13 +336,15 @@
                 bindto: '#degree_stats',
                 data: {
                     json: data['degree'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'degree',
+                          value: ['applications']
+                    },
                 },
-
                 axis: {
                     x: {
-                        type: 'category'
+                        type: 'category',
                     }
                 }
             });
@@ -324,8 +352,11 @@
                 bindto: '#degree_stats_confirmed',
                 data: {
                     json: data['degree_confirmed'],
-                    type: 'bar'
-
+                    type: 'bar',
+                    keys: {
+                          x: 'degree',
+                          value: ['applications']
+                    },
                 },
 
                 axis: {
